# Vietnamese-Traffic-Sign-Detection-System

./: .gitignore  pull_data.py  pyproject.toml
demo/: README.md  app.py  chatbot.py  detector.py  requirements.txt
faster_rcnn/: inference.py  model.py  pull_model.py  train_faster_rcnn.py
text_data/: 168_2024_NĐ_CP.md  51_bgtvt_kt.md
utils/: classes.txt  classes_vie.txt  data_eda.ipynb  dataset.py  demo_sign_lookup.py  label_const.py  sign_info_parser.py
yolov11/: infer_model.ipynb  inference.py  train_model.ipynb  train_yolo.py
yolov11/yolo-viet-signs/yolov8n_viet_signs/: args.yaml  results.csv
yolov11/yolo-viet-signs/yolov8n_viet_signs2/: args.yaml  results.csv
